# cudec

./: .coderabbit.yaml  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt  bench_lz4.cpp  get-corpora.sh  gpu_bench.cu  gpu_bench.h
docs/: BENCHMARK-METHODOLOGY.md  BENCHMARKS.md  MASTERPLAN.md
include/: cudec.h
src/: batch.cu  cuda_raii.h  frame.cpp  lz4_block.h  lz4_decode.cuh  stream.cpp  version.c  xxhash32.h
tests/: CMakeLists.txt  conformance_c.c  fixtures.cpp  fixtures.h  frame_host_negative.cpp  frame_twin.cu  gpu_fixture.cu  launch_fail.cpp  oracle_lz4.cpp  parser_twin.cpp  require.h  smoke.cu  stream_overlap.cu  stream_twin.cu
